# FRA532-Mobile-Robots

./: .gitignore  README.md  docker-compose.yaml
FRA532-Mobile-Robots/maps/: 2024-04-24-21-43-31.pgm  2024-04-24-21-43-31.yaml  F5M.yaml
FRA532-Mobile-Robots/mqtt_teleop/: run.py
FRA532-Mobile-Robots/src/amr_coco/: package.xml
FRA532-Mobile-Robots/src/amr_coco_description/: CMakeLists.txt
FRA532-STM32F103/: .cproject  .mxproject  .project  FRA532-STM32F103 Debug.launch  FRA532-STM32F103.ioc
FRA532-STM32F103/Core/Inc/: stm32f1xx_it.h
FRA532-STM32F103/Core/Src/: gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c
FRA532-STM32F411/: .cproject  .mxproject  .project  FRA532-STM32F411 Debug.launch  FRA532-STM32F411.ioc
FRA532-STM32F411/Core/Inc/: main.h  stm32f4xx_it.h
FRA532-STM32F411/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c
FRA532-STM32G474/: .cproject  .mxproject  .project  FRA532-STM32G474 Debug.launch  FRA532-STM32G474.ioc
FRA532-STM32G474/Core/Inc/: config+var.h  config.h  encoder.h  kalman.h  main.h  motors.h  stm32g4xx_it.h  tim.h
FRA532-STM32G474/Core/Src/: app_freertos.c  config+var.c  config.c  encoder.c  kalman.c  main.c  (+5 more)
maps/: 2024-04-30-23-27-00.pgm  2024-04-30-23-27-00.yaml
mqtt_teleop/: index.html
src/amr_coco/: CMakeLists.txt
src/amr_coco_description/: package.xml
src/amr_coco_navigation/: CMakeLists.txt  package.xml
src/amr_coco_navigation/config/: mapper_params_online_sync.yaml
src/amr_coco_navigation/launch/: manual_mapping.launch.py
src/amr_coco_navigation/src/: cpp_node.cpp
t265-humble/: Dockerfile
(+35 files in other folders)
